examples/errors/30.gf2
DEVICES
SWITCH S1:0;
SWITCH S2:1;
NAND G1:2;
NAND G2:2;
NAND G3:2;
NAND G4:2;
END

MONITORS
S1;
S2;
G4;
END
